--- a/demo_analysis.ipynb
+++ b/demo_analysis.ipynb
@@ -1,24 +1,65 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "776b6928",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize NiveshakAI Query Engine\n",
+    "print(\"🚀 Initializing NiveshakAI Local RAG Engine...\")\n",
+    "\n",
+    "try:\n",
+    "    # Initialize the query engine with local models\n",
+    "    query_engine = QueryEngine('config/settings.yaml')\n",
+    "    print(\"✅ QueryEngine initialized successfully\")\n",
+    "    \n",
+    "    # Test with a simple Philip Fisher question\n",
+    "    print(\"\\n🤔 Testing with Philip Fisher knowledge...\")\n",
+    "    \n",
+    "    test_query = \"What are the key characteristics of a quality growth stock according to Philip Fisher?\"\n",
+    "    print(f\"Query: {test_query}\")\n",
+    "    \n",
+    "    response = query_engine.process_query(test_query)\n",
+    "    \n",
+    "    print(f\"\\n📖 Knowledge Base Search: Found {len(response.sources)} relevant sources\")\n",
+    "    print(f\"🤖 AI Response Preview: {response.answer[:200]}...\") \n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Error initializing query engine: {e}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d2205227",
    "metadata": {},
    "source": [
-    "# NiveshakAI Demo: AI-Powered Fundamental Investment Analysis\n",
+    "# NiveshakAI Demo: Local AI-Powered Investment Analysis\n",
     "\n",
-    "**🤖 Welcome to NiveshakAI - Your AI Investment Research Assistant**\n",
+    "**🚀 Welcome to NiveshakAI - Your Complete Local AI Investment Assistant**\n",
     "\n",
-    "This notebook demonstrates how NiveshakAI can analyze companies using a structured 3-part analysis format:\n",
-    "1. **Business & Qualitative Analysis** - Understanding the company's operations, management, and competitive position\n",
-    "2. **Financial Metrics & Judgement** - Key financial indicators with clear assessments  \n",
-    "3. **Ratio Analysis** - Comprehensive financial ratios with interpretations\n",
+    "This notebook demonstrates NiveshakAI's revolutionary local RAG (Retrieval-Augmented Generation) pipeline that runs entirely on your machine!\n",
     "\n",
-    "**Key Features:**\n",
-    "- ✅ Good, ⚠️ Caution, ❌ Poor rating system\n",
-    "- RAG-based analysis using finance books and annual reports\n",
-    "- Personalized recommendations based on your investment persona\n",
-    "- Structured output matching professional analysis standards\n",
+    "## 🎯 What Makes NiveshakAI Special:\n",
+    "\n",
+    "### 🔒 **Completely Local & Private**\n",
+    "- **Local LLM**: DeepSeek R1 7B via Ollama (no API costs!)\n",
+    "- **Local Embeddings**: Nomic-embed-text model\n",
+    "- **Local Vector DB**: Qdrant for knowledge storage\n",
+    "- **Zero Data Sharing**: Everything stays on your machine\n",
+    "\n",
+    "### 📚 **Pre-loaded Investment Knowledge**\n",
+    "- ✅ **Philip Fisher's \"Common Stocks and Uncommon Profits\"** already ingested (913 chunks)\n",
+    "- 🤖 Ask sophisticated questions about growth investing principles\n",
+    "- 📖 Add your own investment books for personalized analysis\n",
+    "\n",
+    "### 🎯 **Three-Part Analysis Framework**\n",
+    "1. **Business & Qualitative Analysis** - Company operations, management, competitive position\n",
+    "2. **Financial Metrics & Judgement** - Key indicators with clear ✅ Good, ⚠️ Caution, ❌ Poor ratings\n",
+    "3. **Investment Recommendations** - AI-powered insights based on ingested knowledge\n",
+    "\n",
+    "**🌟 Ready to explore? Let's dive into the local AI-powered investment analysis!**\n",
     "\n",
     "---"
    ]
@@ -28,9 +69,15 @@
    "id": "70f9961d",
    "metadata": {},
    "source": [
-    "## 🔧 Setup and Configuration\n",
+    "## 🔧 Setup: Local RAG Infrastructure\n",
     "\n",
-    "First, let's import the required libraries and set up our NiveshakAI system."
+    "Before we begin, let's verify that our local AI infrastructure is running:\n",
+    "\n",
+    "1. **Ollama Service** - Local LLM and embedding models\n",
+    "2. **Qdrant Database** - Vector knowledge storage\n",
+    "3. **Philip Fisher Knowledge Base** - Pre-loaded investment wisdom\n",
+    "\n",
+    "First, let's import libraries and initialize our local AI system."
    ]
   },
   {
@@ -53,16 +100,55 @@
     "# Add the src directory to Python path\n",
     "sys.path.append(os.path.join(os.getcwd(), 'src'))\n",
     "\n",
-    "# NiveshakAI imports\n",
-    "from src.analysis.query import AIAnalyzer\n",
-    "from src.analysis.valuation import ValuationAnalyzer\n",
-    "from src.ingestion.reports import ReportProcessor\n",
+    "# NiveshakAI Local RAG imports\n",
+    "from src.analysis.query import QueryEngine\n",
+    "from src.analysis.valuation import ValuationAnalyzer  \n",
+    "from src.ingestion.books import BookProcessor\n",
     "from src.embedding.embedder import EmbeddingManager\n",
     "from src.utils.logger import get_logger\n",
     "from src.utils.financial_utils import FinancialCalculator\n",
     "\n",
-    "print(\"✅ NiveshakAI modules imported successfully\")\n",
-    "print(f\"📁 Working directory: {os.getcwd()}\")"
+    "print(\"✅ NiveshakAI Local RAG modules imported successfully\")\n",
+    "print(f\"📁 Working directory: {os.getcwd()}\")\n",
+    "print(\"🚀 Local AI Pipeline: Ollama + Qdrant + Philip Fisher Knowledge Base\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37692dc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test Local Infrastructure\n",
+    "import requests\n",
+    "import ollama\n",
+    "\n",
+    "print(\"🔍 Testing Local AI Infrastructure...\\n\")\n",
+    "\n",
+    "# Test Ollama connection\n",
+    "try:\n",
+    "    models = ollama.list()\n",
+    "    print(f\"✅ Ollama connected - {len(models['models'])} models available\")\n",
+    "    \n",
+    "    # Check for required models\n",
+    "    model_names = [m.get('name', 'Unknown') for m in models['models']]\n",
+    "    if 'deepseek-r1:7b' in model_names:\n",
+    "        print(\"   ✅ DeepSeek R1 7B model ready\")\n",
+    "    if 'nomic-embed-text:latest' in model_names:\n",
+    "        print(\"   ✅ Nomic embedding model ready\")\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Ollama connection failed: {e}\")\n",
+    "\n",
+    "# Test Qdrant connection  \n",
+    "try:\n",
+    "    response = requests.get('http://localhost:6333')\n",
+    "    if response.status_code == 200:\n",
+    "        print(\"✅ Qdrant vector database connected\")\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Qdrant connection failed: {e}\")\n",
+    "\n",
+    "print(\"\\n🎯 Local RAG infrastructure check complete!\")"
    ]
   },
   {
@@ -91,12 +177,43 @@
   },
   {
    "cell_type": "markdown",
+   "id": "381e7c5c",
+   "metadata": {},
+   "source": [
+    "## 📚 Demo 1: Philip Fisher Knowledge Base\n",
+    "\n",
+    "NiveshakAI comes pre-loaded with Philip Fisher's \"Common Stocks and Uncommon Profits\" - let's test the knowledge base with some investment questions!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "522ca266",
    "metadata": {},
    "source": [
     "## 📊 Define Analysis Structure\n",
     "\n",
-    "Let's create the structured analysis template that matches your preferred format."
+    "Let's create the structured analysis template that matches your preferred format.\n",
+    "\n",
+    "# Load NiveshakAI configuration\n",
+    "with open('config/settings.yaml', 'r') as f:\n",
+    "    config = yaml.safe_load(f)\n",
+    "\n",
+    "print(\"📋 NiveshakAI Configuration:\")\n",
+    "print(f\"   🤖 LLM Provider: {config.get('llm', {}).get('provider', 'Unknown')}\")\n",
+    "print(f\"   🔗 Embedding Provider: {config.get('embedding', {}).get('provider', 'Unknown')}\")\n",
+    "print(f\"   💾 Vector DB: {config.get('vector_db', {}).get('provider', 'Unknown')}\")\n",
+    "print(f\"   📚 Vector Collection: {config.get('vector_db', {}).get('qdrant', {}).get('collection_name', 'Unknown')}\")\n",
+    "\n",
+    "# Load persona configuration \n",
+    "with open('config/persona.yaml', 'r') as f:\n",
+    "    persona_config = yaml.safe_load(f)\n",
+    "\n",
+    "print(f\"\\n👤 Investment Persona:\")\n",
+    "print(f\"   📊 Style: {persona_config.get('investor_profile', {}).get('philosophy', {}).get('style', 'Unknown')}\")\n",
+    "print(f\"   ⚖️ Risk Tolerance: {persona_config.get('investor_profile', {}).get('risk_tolerance', 'Unknown')}\")\n",
+    "print(f\"   📅 Horizon: {persona_config.get('investor_profile', {}).get('investment_horizon', 'Unknown')}\")\n",
+    "\n",
+    "print(\"\\n✅ Configuration loaded successfully\")"
    ]
   },
   {
